# enigma

./: .clang-format  CMakeLists.txt  main.cpp
include/: enigma.h
include/enigma/: m4.h  solver.h
src/: enigma.cpp  m4.cpp  solver.cpp
test/: enigma_test.cpp
